Fixed UI bugs and Functionality Issues
login and create account:{

- taskbar: for better user understanding, changed saved lists svg to keep distinction on sign-up and login pages.
 
- search bar: fixed bugs in lists page (bug: with input span incorrectly set)
}



login and create account pages: {

- layout: fixed layout bug with flexbox (bug: would scroll even on full page)

- accessibility: fixed accessibility bug by overhauling linking, button functionality, and function calling (bug: would tab over the create account button twice)

- buttons: fixed buttons bug by overhauling linking, button functionality, and function calling (bug: improper formatting lead to size inconsistency + improper page linking)

- design edits: overhauled nav bar location, functionality, interface, and coloring

input bar - fixed bugs with input bar functionality and design (bug: with className) (design change: better hover interface)
}

--- a/craftycart-webapp/src/globals.css
+++ b/craftycart-webapp/src/globals.css
@@ -5,9 +5,11 @@
 :root {
     --lighter-green: #73DD65;
     --light-green: #5ECC5A;
+    --faded-green: #22bf61;
     --green: #2BB857;
     --dark-green: #0DA74B;
     --black: #374241;
+    --dark-gray: #595959;
     --gray:  hsl(175, 9%, 52%);
     --white: hsl(139, 62%, 97%);
     --bg-white: hsl(139, 62%, 95%);
